manifests/seafile/deploy-memcached.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memcached
  namespace: seafile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memcached
  template:
    metadata:
      labels:
        app: memcached
    spec:
      containers:
        - name: memcached
          image: memcached
          resources:
            requests:
              cpu: 50m
              memory: 50Mi
            limits:
              cpu: 200m
              memory: 256Mi
          args: ["-m", "256"]
          ports:
            - containerPort: 11211
