manifests/seafile/deploy-seafile.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seafile
  namespace: seafile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seafile
  template:
    metadata:
      labels:
        app: seafile
    spec:
      containers:
        - name: seafile
          image: seafileltd/seafile-mc:12.0.11
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 2000m
              memory: 2.5Gi
          ports:
            - containerPort: 80
            - containerPort: 8082
              name: seafile-drive
          volumeMounts:
            - name: seafile-data
              mountPath: /shared
            - name: certs
              mountPath: "/etc/ssl/certs"
      volumes:
        - name: certs
        - name: domain-tls
          secret:
            secretName: domain-tls
        - name: seafile-data
          persistentVolumeClaim:
            claimName: seafile-data
      restartPolicy: Always
