manifests/seafile/svc-memcached.yml
apiVersion: v1
kind: Service
metadata:
  name: memcached
  namespace: seafile
spec:
  selector:
    app: memcached
  ports:
    - protocol: TCP
      port: 11211
      targetPort: 11211
