manifests/seafile/svc-seafile.yml
apiVersion: v1
kind: Service
metadata:
  name: seafile
  namespace: seafile
spec:
  selector:
    app: seafile
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: file
      protocol: TCP
      port: 8082
      targetPort: 8082
