manifests/seafile/ingressroute-seafile-data.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: seafile-data
  namespace: seafile
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      middlewares:
        - name: stripprefix
          namespace: seafile
      match: <SEAFILE_DATA_MATCH> # WARN relies on prefix /seafhttp
      observability:
        accessLogs: true
        metrics: true
      services:
        - name: seafile
          namespace: seafile
          port: 8082
  tls:
    secretName: domain-tls
    domains:
      - main: <SEAFILE_DOMAIN>
