manifests/seafile/ingressroute-seafile.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: seafile
  namespace: seafile
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: <SEAFILE_MATCH>
      observability:
        accessLogs: true
        metrics: true
        tracing: true
      services:
        - name: seafile
          namespace: seafile
          port: 80
  tls:
    secretName: domain-tls
    domains:
      - main: <SEAFILE_DOMAIN>
